--- a/src/TechChallenge.Infrastructure/TechChallenge.Infrastructure.csproj
+++ b/src/TechChallenge.Infrastructure/TechChallenge.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TechChallenge.Domain\TechChallenge.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
