--- a/src/TechChallenge.Infrastructure/TechChallenge.Infrastructure.csproj
+++ b/src/TechChallenge.Infrastructure/TechChallenge.Infrastructure.csproj
@@ -26,4 +26,10 @@
     <ProjectReference Include="..\TechChallenge.Domain\TechChallenge.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
