--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore --property WarningLevel=0
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity minimal
