--- a/src/TechChallenge.Api/appsettings.json
+++ b/src/TechChallenge.Api/appsettings.json
@@ -5,6 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": { "DefaultConnection": "Server=localhost,1433;Database=TechChallenge;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;" },
+  //"ConnectionStrings": { "DefaultConnection": "Server=localhost,1433;Database=TechChallenge;User ID=sa;Password=1q2w3e4r@#@;Trusted_Connection=False; TrustServerCertificate=True;" },
   "AllowedHosts": "*"
 }
