--- a/src/TechChallenge.Infrastructure/appsettings.json
+++ b/src/TechChallenge.Infrastructure/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=TechChallenge;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;"
-  }
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=localhost,1433;Database=TechChallenge;User ID=sa;Password=1q2w3e4r@#@;Trusted_Connection=False; TrustServerCertificate=True;"
+  //}
 }
