--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ name: 'tech-challenge'
 
 services:
   ms-sql:
-    image: mcr.microsoft.com/mssql/server:2019-latest
+    image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: sqlserver
     hostname: sqlserver
     environment:
@@ -33,7 +33,7 @@ services:
     container_name: techchallenge.api
     environment:
         ASPNETCORE_ENVIRONMENT: Development
-        ConnectionStrings__DefaultConnection: Server=ms-sql; Database=TechChallenge; User ID=sa; Password=1q2w3e4r@#@; Trusted_Connection=False; TrustServerCertificate=True;
+        DefaultConnection: Server=ms-sql,1433;Database=TechChallenge;User ID=sa;Password=1q2w3e4r@#@;Trusted_Connection=False; TrustServerCertificate=True;
     depends_on:
       ms-sql:
         condition: service_started  
