--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     container_name: techchallenge.api
     environment:
         ASPNETCORE_ENVIRONMENT: Development
-        DefaultConnection: Server=ms-sql,1433;Database=TechChallenge;User ID=sa;Password=1q2w3e4r@#@;Trusted_Connection=False; TrustServerCertificate=True;
+        ConnectionStrings__DefaultConnection: Server=ms-sql,1433;Database=TechChallenge;User ID=sa;Password=1q2w3e4r@#@;Trusted_Connection=False; TrustServerCertificate=True;
     depends_on:
       ms-sql:
         condition: service_started  
