--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,9 +54,12 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-batman}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-batman}
+      - DS_PROMETHEUS=${DS_PROMETHEUS:-c226b139-d9c1-429c-9984-559dd1c95216}
       # - GF_AUTH_ANONYMOUS_ENABLED=true
       # - GF_AUTH_ANONYMOUS_ORG_ROLE=Editor
     volumes:
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
       - ./grafana/provisioning/datasources/default.yaml:/etc/grafana/provisioning/datasources/default.yaml
+      - ./grafana/provisioning/dashboards/default.yaml:/etc/grafana/provisioning/dashboards/default.yaml
     ports:
       - 3000:3000
