--- a/grafana/provisioning/datasources/default.yaml
+++ b/grafana/provisioning/datasources/default.yaml
@@ -1,4 +1,14 @@
-  datasources:
+apiVersion: 2
+deleteDatasources:
   - name: Prometheus
-    type: prometheus
-    url: http://host.docker.internal:9090
+    orgId: 1
+
+prune: true
+
+datasources:
+- name: Prometheus
+  type: prometheus
+  uid: ${DS_PROMETHEUS}
+  url: http://host.docker.internal:9090
+  orgId: 1
+  editable: false
