--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
-        
+
     - name: Restore dependencies
       run: dotnet restore
 
@@ -22,7 +22,7 @@ jobs:
       run: dotnet build --no-restore --property WarningLevel=0
 
     - name: Test
-      run: dotnet test .\src\TechChallenge.Tests\TechChallenge.Tests.csproj --no-build --verbosity minimal
+      run: dotnet test ./src/TechChallenge.Tests/TechChallenge.Tests.csproj --no-build --verbosity minimal
 
     - name: Integration Test
-      run: dotnet test .\src\TechChallange.IntegrationTests\TechChallange.IntegrationTests.csproj  --no-build --verbosity minimal
+      run: dotnet test ./src/TechChallange.IntegrationTests/TechChallange.IntegrationTests.csproj  --no-build --verbosity minimal
